--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ twitter:
 social:
   links:
     - https://twitter.com/FCCincyDiscord
-discord_link: https://discord.gg/KcfMSnE
+discord_link: https://discord.gg/BWdmn3G
 ranks_link: https://mee6.xyz/leaderboard/336530301205479434
 
 # Build settings
